AutofillManager reset shouldn't cause the metrics to be dropped

Bug: 904953
Change-Id: I763d48881143645102fdaf5d85cb2ab812e8b8c0
Reviewed-on: https://chromium-review.googlesource.com/c/1334327
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Commit-Queue: Nik Bhagat <nikunjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607856}
Former-commit-id: feb4f0d0edb3027d6b1be034aafa38f5fcea8cc0